--- a/rcc/index.html
+++ b/rcc/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="shortcut icon" href="https://scontent.fdel1-1.fna.fbcdn.net/v/t1.0-9/80574071_2581639125389504_4786173819356184576_o.jpg?_nc_cat=109&_nc_sid=6e5ad9&_nc_ohc=HSRYV9hbCWcAX8wg7Ig&_nc_ht=scontent.fdel1-1.fna&oh=a05fd092c7dafbfe019a936ee82e6fac&oe=5EF90692" />
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
     <link rel="stylesheet" href="style.css">
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
