--- a/rcc/index.html
+++ b/rcc/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="style.css">
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
-    <title>Royal House Name Plate</title>
+    <title>Royal House Name Plate, Faridabad</title>
 </head>
 <body >
     
@@ -23,7 +23,7 @@
                 <div class="container">
                     <div class="logo">
                         <!-- <img src="https://img.favpng.com/14/3/9/city-car-logo-royal-car-car-wash-png-favpng-tXxhUWiefAvy97wC7iKYM2ymg.jpg" width="50px" height="50px"> -->
-                        <p>Royal House Name Plate</p>
+                        <h1>Royal House Name Plate</h1>
                       </div>
                     <div id="mainListDiv" class="main_list">
                         <ul class="navlinks">
@@ -209,7 +209,7 @@
           <div class="row">
             <div class="col-md-8 col-sm-6 col-xs-12">
               <p class="copyright-text">Copyright &copy; 2017 All Rights Reserved by 
-           <a href="#">Royal House Name Plate</a>.
+           <a href="#">Royal House Name Plate.</a>
               </p>
             </div>
   
