--- a/rcc/index.html
+++ b/rcc/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Royal House Name Plate is a leading manufacturer of customizable House Name Plates, Fancy Lights">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
     <link rel="shortcut icon" href="https://scontent.fdel1-1.fna.fbcdn.net/v/t1.0-9/80574071_2581639125389504_4786173819356184576_o.jpg?_nc_cat=109&_nc_sid=6e5ad9&_nc_ohc=HSRYV9hbCWcAX8wg7Ig&_nc_ht=scontent.fdel1-1.fna&oh=a05fd092c7dafbfe019a936ee82e6fac&oe=5EF90692" />
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
     <link rel="stylesheet" href="style.css">
@@ -312,10 +313,21 @@
 
     <script>
 
+async function getImages(){
+  var res = await axios.get('https://getimagesrhnp.herokuapp.com/images');
+  var images = res.data;
+  console.log(images)
+
+  for(var i=0;i<images.length;i++){
+    var elem = document.createElement("img");
+    elem.setAttribute("src", images[i].url);
+    elem.setAttribute("onclick","onClick(this)");
+    document.getElementsByClassName("gallery")[0].appendChild(elem);
+}
 
 
-
-
+}
+getImages()
 var prevScrollpos = window.pageYOffset;
 window.onscroll = function() {
 var currentScrollPos = window.pageYOffset;
