--- a/rcc/index.html
+++ b/rcc/index.html
@@ -83,6 +83,7 @@
             <br>
             <br>
             <br>
+            <br>
             <!-- <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Magnam cumque nihil incidunt quo, hic minus dolorem veniam a, laborum quisquam sequi blanditiis ullam alias repellendus? Expedita libero qui magni nihil. Quasi odit, quos nihil ut dolore quidem natus dolorem sit suscipit animi culpa nesciunt assumenda quo asperiores ipsam aspernatur. Sint cum sed suscipit earum, unde deserunt excepturi, dicta odit explicabo, nihil magni vitae repellat aut est libero ratione. Doloribus facere hic perspiciatis atque magni aspernatur maxime voluptates debitis eos, aut repellendus iusto adipisci distinctio quia. Delectus consequatur libero blanditiis distinctio dicta voluptas tempora, ad veniam. Consequuntur, iusto aliquid, molestias ipsam, molestiae totam unde nulla dicta ipsa delectus doloremque architecto et. Praesentium voluptatibus quisquam laborum accusamus velit ipsum officiis, nostrum ducimus delectus non dolor ratione amet, eligendi impedit libero. Cumque voluptates recusandae modi facere, at minus non magnam quisquam. Delectus minima atque eveniet earum sapiente hic. Incidunt molestias ut eligendi neque, expedita quisquam quidem! Autem impedit laboriosam praesentium eos! Nobis totam minima facere, ratione incidunt perferendis animi possimus vero eligendi nihil corrupti enim fugit atque nostrum dolorem eveniet, ipsam sequi. Dicta officiis tempore ea culpa laborum. Accusantium similique odio blanditiis nesciunt quae animi magnam illum. Molestiae cumque in et corporis ut.</p> -->
         </div>
         </div>
@@ -100,6 +101,7 @@
             <br>
             <br>
             <h2>NAMEPLATES</h2>
+            <br>
             <br>
             <br>
             <div class="gallery">
@@ -195,7 +197,8 @@
    
           <br>
           <br>
-            <h2>LIGHTS</h2>
+            <h2>FANCY LIGHTS</h2>
+            <br>
             <br>
             <br>
             <div class="gallery">
@@ -258,20 +261,17 @@
         </div>
         <div class="container">
           <div class="row">
-            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3509.6950104136076!2d77.29414921484143!3d28.39827838251077!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x390cdc2da0fbda81%3A0xd3d0d0fc8409e700!2sRoyal%20Car%20Care!5e0!3m2!1sen!2sin!4v1582443052522!5m2!1sen!2sin" width="300" height="200" frameborder="0" style="border:0;" allowfullscreen=""></iframe>
-  
-            <div class="col-xs-6 col-md-3">
-              <h6>Categories</h6>
-              <ul class="footer-links">
-                <li><a href="#">Name Plates</a></li>
-                <li><a href="#">Number Plates</a></li>
-                <li><a href="#">House Plates</a></li>
-                <li><a href="#">Fancy Lights</a></li>
-                
-              </ul>
-            </div>
-  
-            <div class="col-xs-6 col-md-3">
+            <div class="col-xs-6 col-md-3 col-lg-3">
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3509.6950104136076!2d77.29414921484143!3d28.39827838251077!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x390cdc2da0fbda81%3A0xd3d0d0fc8409e700!2sRoyal%20Car%20Care!5e0!3m2!1sen!2sin!4v1582443052522!5m2!1sen!2sin" width="270" height="200" frameborder="0" style="border:0;" allowfullscreen=""></iframe>
+          </div>
+          <div class="col-xs-6 col-md-3 col-lg-3">
+            <h6>Address</h6>
+            <ul class="footer-links">
+              <li><a href="https://www.google.com/maps?ll=28.398278,77.296338&z=15&t=m&hl=en&gl=IN&mapclient=embed&cid=15262928920124188416" target="_blank">3A/161, Block A, New Industrial Twp 3, New Industrial Town, Faridabad, Haryana 121001</a></li>
+
+            </ul>
+          </div>
+            <div class="col-xs-6 col-md-3 col-lg-3">
               <h6>Quick Links</h6>
               <ul class="footer-links">
                 <li><a href="#">About Us</a></li>
@@ -279,6 +279,20 @@
                 <li><a href="#">Privacy Policy</a></li>
               </ul>
             </div>
+            <div class="col-xs-6 col-md-3 col-lg-3">
+              <h6>All Products</h6>
+              <ul class="footer-links">
+                <li><a href="#">Name Plates</a></li>
+                <li><a href="#">Number Plates</a></li>
+                <li><a href="#">House Plates</a></li>
+                <li><a href="#">Fancy Lights</a></li>
+                <li><a href="#">Car Number Plates</a></li>
+                <li><a href="#">Sneeze Guard</a></li>
+
+              </ul>
+            </div>
+  
+            
           </div>
           <hr>
         </div>
